# autosub

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  pyproject.toml  test.py
llama.cpp_stq/: build-xcframework.sh  convert_hf_to_gguf.py  convert_lora_to_gguf.py
llama.cpp_stq/.github/workflows/: build-msys.yml  docker.yml
llama.cpp_stq/.pi/gg/: SYSTEM.md
llama.cpp_stq/common/: arg.cpp  chat-peg-parser.cpp  chat.cpp  common.cpp  sampling.cpp  sampling.h  speculative.cpp
llama.cpp_stq/conversion/: __init__.py  gemma.py
llama.cpp_stq/ggml/include/: ggml.h
llama.cpp_stq/ggml/src/: ggml-common.h  ggml-quants.c  ggml-quants.h  ggml.c
llama.cpp_stq/ggml/src/ggml-cpu/: arch-fallback.h  ggml-cpu.c  ops.cpp  quants.c  quants.h
llama.cpp_stq/ggml/src/ggml-cpu/arch/arm/: quants.c
llama.cpp_stq/ggml/src/ggml-cuda/: mmvq.cu
llama.cpp_stq/ggml/src/ggml-opencl/: ggml-opencl.cpp
llama.cpp_stq/ggml/src/ggml-sycl/: ggml-sycl.cpp  mmvq.cpp
llama.cpp_stq/ggml/src/ggml-vulkan/: ggml-vulkan.cpp
llama.cpp_stq/ggml/src/ggml-vulkan/vulkan-shaders/: vulkan-shaders-gen.cpp
llama.cpp_stq/gguf-py/gguf/: constants.py  gguf_writer.py  tensor_mapping.py
llama.cpp_stq/include/: llama.h
llama.cpp_stq/scripts/: ui-assets.cmake
llama.cpp_stq/src/: llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-ext.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-kv-cache-dsa.cpp  llama-kv-cache-iswa.cpp  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid.cpp  llama-model-loader.cpp  llama-model-saver.cpp  llama-model.cpp  llama-model.h  llama-quant.cpp
llama.cpp_stq/src/models/: deepseek32.cpp  exaone4.cpp  falcon-h1.cpp  gemma4.cpp  granite-hybrid.cpp  jamba.cpp  kimi-linear.cpp  lfm2.cpp  lfm2moe.cpp  llama4.cpp  mellum.cpp  mimo2.cpp  models.h  modern-bert.cpp  nemotron-h.cpp  plamo2.cpp  qwen35.cpp  qwen35moe.cpp  qwen3next.cpp  step35.cpp
llama.cpp_stq/tests/: test-chat.cpp  test-llama-archs.cpp  test-quantize-fns.cpp
llama.cpp_stq/tools/cli/: cli.cpp
llama.cpp_stq/tools/completion/: completion.cpp
llama.cpp_stq/tools/mtmd/: CMakeLists.txt  clip-graph.h  clip-impl.h  clip-model.h  clip.cpp  clip.h  mtmd-cli.cpp  mtmd-image.cpp  mtmd.cpp  mtmd.h
llama.cpp_stq/tools/mtmd/models/: exaone4_5.cpp  granite-speech.cpp  mimovl.cpp  models.h
llama.cpp_stq/tools/quantize/: quantize.cpp
llama.cpp_stq/tools/server/: README.md  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-task.cpp  server.cpp
llama.cpp_stq/tools/server/tests/unit/: test_chat_completion.py
model/: download.sh
scripts/: build_llama_stq.sh
src/: llamacpp_translator.py  main.py  speech_recognizer.py  subtitle_generator.py  translator.py  vad_detector.py
src/autosub/: gui.py  main.py  model_manager.py
src/autosub/asr/: __init__.py  sensevoice_onnx.py
src/autosub/core/: __init__.py  base.py
src/autosub/translator/: __init__.py  llamacpp.py  transformers.py
src/autosub/utils/: __init__.py  audio.py
src/autosub/vad/: __init__.py  silero.py
src/ja2cn/: main.py
src/ja2cn/asr/: __init__.py  funasr.py  sensevoice_onnx.py
src/ja2cn/core/: __init__.py  base.py
src/ja2cn/translator/: __init__.py  llamacpp.py  transformers.py
src/ja2cn/utils/: __init__.py  audio.py
src/ja2cn/vad/: __init__.py  silero.py
tests/: conftest.py  test_core.py  test_model_manager.py  test_subtitle.py
