[project]
name = "ja2cn"
version = "0.1.0"
description = "Japanese video audio to Chinese subtitles using FunASR + HY-MT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=12.0.0",
    "funasr-onnx>=0.1.0",
    "llama-cpp-python>=0.2.0",
    "transformers>=4.35.0",
    "modelscope>=1.9.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "silero-vad>=6.0.0",
    "onnxruntime>=1.15.0",
    "loguru>=0.7.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
transformers = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ja2cn = "ja2cn.main:main"
