[project]
name = "autosub"
version = "0.1.0"
description = "Automatic multi-language subtitle generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=12.0.0",
    "funasr-onnx>=0.1.0",
    "llama-cpp-python>=0.2.0",
    "transformers>=4.35.0",
    "modelscope>=1.9.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "silero-vad>=6.0.0",
    "onnxruntime>=1.15.0",
    "loguru>=0.7.0",
    "jieba>=0.42.1",
    "customtkinter>=5.2.2",
    "Pillow>=10.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
transformers = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
autosub = "autosub.main:main"
autosub-gui = "autosub.gui:main"
